--- a/pincaster-frontend/app/mapMain/MapPage.module.css
+++ b/pincaster-frontend/app/mapMain/MapPage.module.css
@@ -179,6 +179,19 @@
   background: linear-gradient(120deg, #e9ecef 0%, #dee2e6 100%);
   min-height: 400px;
   height: 100%;
+  width: 100%;
+}
+
+.mapMarker {
+  background-image: url('/mapbox/marker-icon.png');
+  background-size: cover;
+  width: 25px;
+  height: 41px;
+  cursor: pointer;
+}
+
+.tempMarker {
+  background-image: url('/mapbox/marker-icon-red.png');
 }
 
 /* Map error and loading states */
